# netwatch-sdk

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/ebpf-programs/: Cargo.toml  rust-toolchain.toml
crates/ebpf-programs/.cargo/: config.toml
crates/ebpf-programs/src/: main.rs
docs/: architecture.md  collectors.md  extending.md  platform-support.md  publishing.md  testing.md  wire-format.md
docs/plans/: ebpf.md  test-coverage.md
proptest-regressions/collectors/: connections.txt  system.txt
scripts/: build-ebpf.sh  refresh-prebuilt.sh
src/: lib.rs  types.rs  wire.rs
src/collectors/: config.rs  connections.rs  disk.rs  health.rs  mod.rs  network_intel.rs  process_bandwidth.rs  system.rs  traffic.rs
src/ebpf/: event.rs  mod.rs  source.rs
src/platform/: linux.rs  macos.rs  mod.rs
tests/: ebpf_integration.rs
